# Solana-Shadow-Sdk

./: .dockerignore  .gitignore  ANNOUNCEMENT.txt  Dockerfile  PRODUCTION_INFRASTRUCTURE.md  PRODUCTION_SETUP.md  README.md  TODO.md  TRUSTED_SETUP.md  k8s-deployment.yaml  package-lock.json  package.json  shadow-config.json  tsconfig.tsbuildinfo
ceremony-coordinator/: .gitignore  README.md  package.json  participant-cli.js  server.js
ceremony-coordinator/public/: index.html
circuits/: balance.circom  build.sh  input.json  package.json  ring_signature.circom  transfer.circom
config/: devnet.json  mainnet.example.json  production.config.ts
monitoring/: README.md  dashboard-server.ts  metrics-collector.ts  package-lock.json  package.json
monitoring/public/: explanation.html  index.html  transfer.html
privacy-integration/: cli.ts  encrypted-note-storage.ts  note-manager.ts  package-lock.json  package.json  privacy-sdk.ts  relayer-service.ts  solana-client.ts  start-relayer.bat  store-verification-keys.ts
programs/shadow-privacy/: Cargo.toml  Xargo.toml
programs/shadow-privacy/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  verifier.rs
scripts/: CEREMONY_GUIDE.md  README.md  bundle-browser.js  deploy-devnet.sh  deploy-mainnet.sh  production-readiness-check.ts  run-ceremony.bat  run-ceremony.sh
scripts/vk-converter/: Cargo.toml
scripts/vk-converter/src/: main.rs
web-dashboard/: dashboard-server.ts  package.json
web-dashboard/public/: index.html  transfer.html
web-dashboard/public/circuits/: balance.wasm  balance_0000.zkey  (+6 more)
