[package]
name = "shadow-privacy"
version = "0.1.0"
description = "Shadow Privacy Protocol - Solana program for private transactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_privacy"

[features]
no-entrypoint = []
test-bpf = []
real-zk-verification = []

[dependencies]
solana-program = "~1.17.0"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.6.1", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"

# Crypto dependencies
blake3 = { version = "=1.5.0" }
base64ct = { version = "=1.6.0" }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
proc-macro-crate = { version = "=2.0.0" }
time = { version = "=0.3.34" }
indexmap = { version = "=2.2.6" }
hashbrown = { version = "=0.14.3" }
num_enum = { version = "=0.7.2" }

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
spl-associated-token-account = "1.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
